pop h1 title minwidth added to class to fix short title formatting / layout issue

--- a/www/popup.css
+++ b/www/popup.css
@@ -62,6 +62,7 @@
   display:block; 
   font-size: 20px; 
   font-weight: bold;
+  min-width: 145px;
 }
 .popup-title-h2{
   line-height: 14px; 
@@ -193,6 +194,7 @@
 
   .popup-title-h1 {
     font-size: 12px;
+    min-width: 100px;
   }
   .popup-title-h2 {
     font-size: 10px;
